# agent-git

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  dna.yml  install.sh
.github/workflows/: auto-release.yml  ci.yml  release.yml
src/: alias.rs  clone.rs  ephemeral.rs  install.rs  main.rs  normalize.rs  passthrough.rs  registry.rs  scan.rs
tests/: passthrough.rs
